Update some tests in index-it, kernel-it and stresstest to junit 5.