@@ -20,12 +20,11 @@
 package org.neo4j.kernel.impl.api.index;
 
 import org.hamcrest.CoreMatchers;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.neo4j.dbms.api.DatabaseManagementService;
 import org.neo4j.graphdb.GraphDatabaseService;
@@ -34,15 +33,17 @@ import org.neo4j.graphdb.NotFoundException;
 import org.neo4j.graphdb.Transaction;
 import org.neo4j.graphdb.schema.IndexDefinition;
 import org.neo4j.graphdb.schema.Schema;
+import org.neo4j.io.fs.FileSystemAbstraction;
 import org.neo4j.io.fs.UncloseableDelegatingFileSystemAbstraction;
 import org.neo4j.test.DoubleLatch;
 import org.neo4j.test.TestDatabaseManagementServiceBuilder;
-import org.neo4j.test.rule.fs.EphemeralFileSystemRule;
+import org.neo4j.test.extension.Inject;
+import org.neo4j.test.extension.testdirectory.EphemeralTestDirectoryExtension;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
 import static org.neo4j.configuration.GraphDatabaseSettings.default_schema_provider;
 import static org.neo4j.graphdb.Label.label;
@@ -54,10 +55,11 @@ import static org.neo4j.test.mockito.matcher.Neo4jMatchers.getIndexes;
 import static org.neo4j.test.mockito.matcher.Neo4jMatchers.hasSize;
 import static org.neo4j.test.mockito.matcher.Neo4jMatchers.haveState;
 
-public class IndexRestartIT
+@EphemeralTestDirectoryExtension
+class IndexRestartIT
 {
-    @Rule
-    public final EphemeralFileSystemRule fs = new EphemeralFileSystemRule();
+    @Inject
+    private FileSystemAbstraction fs;
 
     private GraphDatabaseService db;
     private TestDatabaseManagementServiceBuilder factory;
@@ -65,18 +67,16 @@ public class IndexRestartIT
     private final Label myLabel = label( "MyLabel" );
     private DatabaseManagementService managementService;
 
-    @Before
-    public void before()
+    @BeforeEach
+    void before()
     {
         factory = new TestDatabaseManagementServiceBuilder();
-        factory.setFileSystem( new UncloseableDelegatingFileSystemAbstraction( fs.get() ) );
-        factory.setExtensions( Collections.singletonList(
-            singleInstanceIndexProviderFactory( "test", provider )
-        ) );
+        factory.setFileSystem( new UncloseableDelegatingFileSystemAbstraction( fs ) );
+        factory.setExtensions( List.of( singleInstanceIndexProviderFactory( "test", provider ) ) );
     }
 
-    @After
-    public void after()
+    @AfterEach
+    void after()
     {
         managementService.shutdown();
     }
@@ -86,7 +86,7 @@ public class IndexRestartIT
      * as possible. If this proves to be flaky, remove it right away.
      */
     @Test
-    public void shouldBeAbleToDropIndexWhileItIsPopulating()
+    void shouldBeAbleToDropIndexWhileItIsPopulating()
     {
         // GIVEN
         startDb();
@@ -100,21 +100,13 @@ public class IndexRestartIT
         {
             // THEN
             assertThat( getIndexes( transaction, myLabel ), hasSize( 0 ) );
-            try
-            {
-                getIndexState( transaction, index );
-                fail( "This index should have been deleted" );
-            }
-            catch ( NotFoundException e )
-            {
-                assertThat( e.getMessage(), CoreMatchers.containsString( myLabel.name() ) );
-            }
+            var e = assertThrows( NotFoundException.class, () -> getIndexState( transaction, index ) );
+            assertThat( e.getMessage(), CoreMatchers.containsString( myLabel.name() ) );
         }
-
     }
 
     @Test
-    public void shouldHandleRestartOfOnlineIndex()
+    void shouldHandleRestartOfOnlineIndex()
     {
         // Given
         startDb();
@@ -138,7 +130,7 @@ public class IndexRestartIT
     }
 
     @Test
-    public void shouldHandleRestartIndexThatHasNotComeOnlineYet()
+    void shouldHandleRestartIndexThatHasNotComeOnlineYet()
     {
         // Given
         startDb();
